--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Photographrer, Videographer, Web Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Stacy, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Skiing, Skateboarding, Photography, Videography</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Freelance ski filmmaker and landscape photographer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Roseville, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To have a rewarding and challenging career</p>
     </section>
 
     <footer id="footer">
